# clova-face-kit

./: .gitignore  LICENSE  NOTICE  README.md
docs/: overall_architecture.drawio
docs/how-to-use/: quick_developer_guide_android_ko.md  quick_developer_guide_c++_ko.md  quick_developer_guide_ios_ko.md  quick_developer_guide_python_ko.md
examples/: CMakeLists.txt
examples/android/: .gitignore  build.gradle  gradle.properties
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  image_converter.cpp
examples/android/app/src/main/cpp/converter/: rotate_image.cpp  rotate_image.h  yuv2rgb.cpp  yuv2rgb.h
examples/android/app/src/main/cpp/utils/: bitmap_utils.cpp  bitmap_utils.h
examples/android/app/src/main/java/ai/clova/see/example/: CameraFragment.kt  ImageConverter.java  ImageProcessor.java  ImageUtils.java  MainActivity.kt  PermissionsFragment.kt  TheApplication.kt
examples/android/app/src/main/res/drawable/: background_bottom_sheet.xml  icon_camera_front.xml  icon_camera_rear.xml  icon_clova_see_off.xml  icon_clova_see_on.xml  icon_launcher_background.xml  icon_log_off.xml  icon_log_on.xml  icon_run_for_body.xml  icon_run_for_face.xml  icon_run_for_ocr.xml
examples/android/app/src/main/res/drawable-v24/: icon_launcher_foreground.xml
examples/android/app/src/main/res/layout/: activity_main.xml  bottom_sheet.xml  fragment_camera.xml
examples/android/app/src/main/res/mipmap-anydpi-v26/: icon_launcher.xml
examples/android/app/src/main/res/navigation/: navigation_graph.xml
examples/android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/benchmark/: CMakeLists.txt  benchmark_template.md  main.cc
examples/ios/: README.md
examples/ios/Sample_Face/: AppDelegate.swift  CameraManager.swift  DemoInteractor.swift  DemoPresenter.swift  Info.plist  Sample_Face-Bridging-Header.h  ViewController.swift
examples/ios/Sample_Face.xcodeproj/: project.pbxproj
examples/ios/Sample_Face.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/ios/Sample_Face.xcodeproj/xcshareddata/xcschemes/: Sample_Face.xcscheme
examples/ios/Sample_Face/Assets.xcassets/flipCamera.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_body.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_camera.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_face.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_flip.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_launcher_round.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_ocr.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_play.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_refresh.imageset/: Contents.json
examples/ios/Sample_Face/Assets.xcassets/icon_stop.imageset/: Contents.json
examples/ios/Sample_Face/Base.lproj/: Main.storyboard
examples/ios/Sample_Face/CSUserDefault/: CSUserDefault.swift  CSUserDefaultKey.swift
examples/ios/Sample_Face/Clova_see_Demo/: CALayer+draw.swift  ClovaSeeWrapper+DetectFace.swift  Clova_see.storyboard  Clova_see_DemoInterator.swift  Clova_see_DemoPresenter.swift  Clova_see_DemoViewController.swift  UIView+draw.swift
examples/ios/Sample_Face/Clova_see_Demo/Setting/: Setting.storyboard  SettingCell.swift  SettingViewController.swift
examples/ios/Sample_Face/Demo List/: DemoCategory.swift  DemoListViewController.swift
examples/ios/Sample_Face/Helper/: CVPixelBuffer+Helpers.swift  ClovaSeeWrapper+Extension.swift  PixelBuffer+Extension.swift  UIButton+Extension.swift  UIImage+CVPixelBuffer.swift  UIImage+Extension.swift  Utils.swift
examples/opencv_highgui/: CMakeLists.txt  main.cc
examples/opencv_highgui_python/: README.md  main.py
examples/webassembly/: README.md  capture.js  index.html
